tests/error/array_invalid_size.vbc
// 预期：应对非法数组长度报「数组长度必须是编译期正整数常量」错误

int main() {
    int x = 3;
    int arr[x];
    return 0;
}

main();
